--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,17 @@ margin-bottom: 2rem;
     padding-bottom: 3rem;
     margin-top: 4rem;
 }
+
+/**Sobre Nosotros**/
+@media (min-width: 768px) {
+    .sobre-nosotros{
+    display: flex;
+    justify-content: space-between;
+    }
+.sobre-nosotros__imagen,
+.sobre-nosotros__texto
+{
+    flex-basis: calc(50% - 1rem); /*SIRVE COMO UN WITH PERO ES VERSION CORTA DE FLEX BOX*/
+    }
+
+}
